--- a/website/index.html
+++ b/website/index.html
@@ -120,6 +120,7 @@
   <div class="col-lg-8 mx-auto p-4 py-md-5">
   <h1>Welcome to Easy-Pretty with Bootstrap!</h1>
     <p class="fs-5 col-md-8">Replace this class here with your own blurb.  I just wanted something pretty</p>
+    <p>New message from client</p>
 
    </div>
     <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
