demo of tagging

--- a/website/index.html
+++ b/website/index.html
@@ -121,6 +121,7 @@
   <h1>Welcome to Easy-Pretty with Bootstrap!</h1>
     <p class="fs-5 col-md-8">Replace this class here with your own blurb.  I just wanted something pretty</p>
     <p>New message from client</p>
+    <p>New content added.  This will be tagged</p>
 
    </div>
     <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
