--- a/website/index.html
+++ b/website/index.html
@@ -122,6 +122,7 @@
     <p class="fs-5 col-md-8">Replace this class here with your own blurb.  I just wanted something pretty</p>
     <p>New message from client</p>
     <p>New content added.  This will be tagged</p>
+    <h2>New day, new content</h2>
 
    </div>
     <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
